--- a/weekendArticle.html
+++ b/weekendArticle.html
@@ -39,7 +39,7 @@
                 <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Digital Logo" class="u-image-contain">
             </a>
             <div class="navbar-mobile__toggle">
-                <div class="navbar-mobile__toggle-icon"></div>
+                <img src="./assets/images/navbar-icon-dark-primary.svg" alt="Menu" class="u-image-contain">
             </div>
         </div>
         <div class="navbar-mobile__menu-items">
@@ -70,6 +70,17 @@
       </div>
       <div class="weekend-content__row weekend-content__row--notes">
         <div class="weekend-content__left-panel">
+            <div class="weekend-content__left-panel-title-row display-under-991">
+                <h1 class="weekend-content__title weekend-content__title--mobile display-under-991">
+                  <div class="weekend-content__title-mask">
+                    <span>Wknd</span>
+                  </div>
+                  <div class="weekend-content__title-mask">
+                      <span>Notes</span>
+                  </div>
+                </h1>
+                <div class="weekend-content__selector-button"></div>
+            </div>
           <div class="weekend-content__left-panel-links">
             <div class="weekend-content__selector weekend-content__selector--title">
                 <span>
@@ -138,7 +149,7 @@
             -->
           </div>
         <div class="weekend-content__content weekend-content__content--article weekend-content__content-weekend weekend-content__content--active">
-            <h1 class="weekend-content__title">
+            <h1 class="weekend-content__title weekend-content__title--desktop no-display-under-991">
                 <div class="weekend-content__title-mask">
                     <span>Wknd</span>
                 </div>
@@ -163,9 +174,7 @@
                 his thirty-one-year career. 
               </p>
               <div class="weekend-content__weekend-column weekend-content__weekend-column--active weekend-content__weekend-column--active-mobile">
-                <img src="./assets/images/wknd1.png" alt="">
-                <br>
-                <br>
+                <img src="./assets/images/wknd1.png" class="u-image-cover">
               </div>
           </div>
           <div class="weekend-content__article weekend-content__article--anim animate__fadeIn">
@@ -188,7 +197,7 @@
       </div>
     </div>
 
-    <footer class="footer">
+    <footer class="footer no-display-under-991">
         <div class="footer__container">
             <div class="footer__logo">
                 <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Logo" class="u-image-contain">
@@ -241,6 +250,96 @@
           </div>
       </div>
     </footer>
+        <footer class="footer display-under-991" style="padding: 0px;">
+            <a href="/" class="navbar-mobile__logo">
+                <img src="./assets/images/oneriver-logo-light.png" alt="OneRiver Digital Logo"
+                    class="u-image-contain display-under-991" style="margin-left: -90px;
+                    margin-bottom: -85px;">
+            </a>
+            <div class="footer__legal-links display-under-991" style="margin-top: -10px">
+                <div class="footer__legal-item">
+                    <a href="/privacypolicy.html" class="footer__legal-link">
+                        Privacy
+                    </a>
+                </div>
+                <div class="footer__legal-item">
+                    <a href="/termsconditions.html" class="footer__legal-link">
+                        Terms of use
+                    </a>
+                </div>
+            </div>
+            <div class="footer__container">
+                <div class="footer__logo">
+                    <img src="./assets/images/footer-logo.png" alt="OneRiver Logo" class="u-image-contain">
+                </div>
+                <div class="footer__contact">
+                    <p class="footer__text display-under-991" style="text-align: right; font-size: 10px; line-height: 12px;">
+                        One River Asset Management is an SEC registered investment advisor, regulated by the National
+                        Futures Association, and manages ERISA assets as a Qualified Plan Asset Manager.
+                    </p>
+                    <p class="footer__text no-display-under-991">
+                        One River Asset Management is an SEC registered investment advisor, regulated by the National
+                        Futures Association, and manages ERISA assets as a Qualified Plan Asset Manager.
+                    </p>
+                    <br>
+                    <div class="footer__contact-row display-under-991" style="text-align: right; font-size: 10px; line-height: 12px; display: block;">
+                        <span class="footer__contact-info">
+                            (203) 489-1440
+                        </span>
+                        <span class="footer__contact-info-spacer">|</span>
+                        <span class="footer__contact-info">
+                            info@oneriveram.com
+                        </span>
+                    </div>
+                    <div class="footer__contact-row no-display-under-991">
+                        <span class="footer__contact-info">
+                            (203) 489-1440
+                        </span>
+                        <span class="footer__contact-info-spacer">|</span>
+                        <span class="footer__contact-info">
+                            info@oneriveram.com
+                        </span>
+                    </div>
+                    <div class="footer__contact-row display-under-991" style="text-align: right; font-size: 10px; line-height: 12px; display: block;">
+                        <span class="footer__contact-info">
+                            <span>3 River Road,</span> <span>2nd Floor, Greenwich,</span> <span>CT 06807</span>
+                        </span>
+                    </div>
+                    <div class="footer__contact-row no-display-under-991">
+                        <span class="footer__contact-info">
+                            <span>3 River Road,</span> <span>2nd Floor, Greenwich,</span> <span>CT 06807</span>
+                        </span>
+                    </div>
+                    <div class="footer__text footer__text--small display-under-991" style="display: block; text-align: right;">
+                        © 2020 One River Asset Management. All Rights Reserved.
+                    </div>
+                    <!-- <div class="footer__contact-row">
+                        <span class="footer__contact-info">
+                            NFA ID: 0461647
+                        </span>
+                        <span class="footer__contact-info-spacer">|</span>
+                        <span class="footer__contact-info">
+                            FINRA: 167835
+                        </span>
+                    </div> -->
+                </div>
+                <!-- <div class="footer__text-container" style="margin-top: 0px;">
+                    
+                </div> -->
+            </div>
+            <div class="footer__legal-links no-display-under-991">
+                <div class="footer__legal-item">
+                    <a href="/privacypolicy.html" class="footer__legal-link">
+                        Privacy
+                    </a>
+                </div>
+                <div class="footer__legal-item">
+                    <a href="/termsconditions.html" class="footer__legal-link">
+                        Terms of use
+                    </a>
+                </div>
+            </div>
+        </footer>
 
     <script>
         window.addEventListener('load', () => {
@@ -290,7 +389,8 @@
             animOffset = 0;
             
             const heroMask = document.querySelector('.weekend-content__banner-mask');
-            const heroTitle = document.querySelector('.weekend-content__title');
+            const heroTitle = document.querySelector('.weekend-content__title--desktop');
+            const heroTitleMobile = document.querySelector('.weekend-content__title--mobile');
             const weekendContent = document.querySelector('.weekend-content__article--anim');
             const weekendArticles = document.querySelector('.weekend-content__weekend-row--vertical');
             const weekendText = document.querySelector('.weekend-content__week-anim-container');
@@ -298,6 +398,7 @@
             function startAllAnimationsInViewport() {
                 addClassBasedOnScroll(heroMask, heroMask, animOffset, 'animate__width-reverse--active');
                 addClassBasedOnScroll(heroTitle, heroTitle, animOffset, 'weekend-content__title--active');
+                addClassBasedOnScroll(heroTitleMobile, heroTitleMobile, animOffset, 'weekend-content__title--active');
                 addClassBasedOnScroll(weekendContent, weekendContent, animOffset, 'animate__fadeIn--active');
                 addClassBasedOnScroll(weekendArticles, weekendArticles, animOffset, 'animate__fadeIn--active');
                 addClassBasedOnScroll(weekendText, weekendText, animOffset, 'animate__fadeIn--active');
