--- a/weekendArticle2.html
+++ b/weekendArticle2.html
@@ -39,7 +39,7 @@
                 <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Digital Logo" class="u-image-contain">
             </a>
             <div class="navbar-mobile__toggle">
-                <div class="navbar-mobile__toggle-icon"></div>
+              <img src="./assets/images/navbar-icon-dark-primary.svg" alt="Menu" class="u-image-contain">
             </div>
         </div>
         <div class="navbar-mobile__menu-items">
