--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <div class="navbar__container">
             <div class="navbar__menu">
-                <a href="/digital.html" class="navbar__menu-item navbar__menu-item">
+                <a href="/digital.html" class="navbar__menu-item">
                     Digital
                 </a>
                 <a href="/alternative.html" class="navbar__menu-item">
@@ -223,10 +223,16 @@
 
 
 
-<footer class="footer no-display-under-991">
+<footer class="footer">
+    <div class="footer__logo footer__logo--mobile">
+        <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Logo" class="u-image-contain">
+    </div>
     <div class="footer__container">
         <div class="footer__logo">
             <img src="./assets/images/oneriver-logo-light.svg" alt="OneRiver Logo" class="u-image-contain">
+        </div>
+        <div class="footer__text footer__text--small display-under-991">
+            © 2020 One River Asset Management. All Rights Reserved.
         </div>
         <div class="footer__contact">
             <div class="footer__contact-row">
@@ -258,7 +264,7 @@
                 One River Asset Management is an SEC registered investment advisor, regulated by the National
                 Futures Association, and manages ERISA assets as a Qualified Plan Asset Manager.
             </p>
-            <div class="footer__text footer__text--small">
+            <div class="footer__text footer__text--small no-display-under-991">
                 © 2020 One River Asset Management. All Rights Reserved.
             </div>
         </div>
@@ -276,97 +282,6 @@
       </div>
   </div>
 </footer>
-    <footer class="footer display-under-991" style="padding: 0px;">
-        <a href="/" class="navbar-mobile__logo">
-            <img src="./assets/images/oneriver-logo-light.png" alt="OneRiver Digital Logo"
-                class="u-image-contain display-under-991" style="margin-left: -90px;
-                margin-bottom: -85px;">
-        </a>
-        <div class="footer__legal-links display-under-991" style="margin-top: -10px">
-            <div class="footer__legal-item">
-                <a href="/privacypolicy.html" class="footer__legal-link">
-                    Privacy
-                </a>
-            </div>
-            <div class="footer__legal-item">
-                <a href="/termsconditions.html" class="footer__legal-link">
-                    Terms of use
-                </a>
-            </div>
-        </div>
-        <div class="footer__container">
-            <div class="footer__logo">
-                <img src="./assets/images/footer-logo.png" alt="OneRiver Logo" class="u-image-contain">
-            </div>
-            <div class="footer__contact">
-                <p class="footer__text display-under-991" style="text-align: right; font-size: 10px; line-height: 12px;">
-                    One River Asset Management is an SEC registered investment advisor, regulated by the National
-                    Futures Association, and manages ERISA assets as a Qualified Plan Asset Manager.
-                </p>
-                <p class="footer__text no-display-under-991">
-                    One River Asset Management is an SEC registered investment advisor, regulated by the National
-                    Futures Association, and manages ERISA assets as a Qualified Plan Asset Manager.
-                </p>
-                <br>
-                <div class="footer__contact-row display-under-991" style="text-align: right; font-size: 10px; line-height: 12px; display: block;">
-                    <span class="footer__contact-info">
-                        (203) 489-1440
-                    </span>
-                    <span class="footer__contact-info-spacer">|</span>
-                    <span class="footer__contact-info">
-                        info@oneriveram.com
-                    </span>
-                </div>
-                <div class="footer__contact-row no-display-under-991">
-                    <span class="footer__contact-info">
-                        (203) 489-1440
-                    </span>
-                    <span class="footer__contact-info-spacer">|</span>
-                    <span class="footer__contact-info">
-                        info@oneriveram.com
-                    </span>
-                </div>
-                <div class="footer__contact-row display-under-991" style="text-align: right; font-size: 10px; line-height: 12px; display: block;">
-                    <span class="footer__contact-info">
-                        <span>3 River Road,</span> <span>2nd Floor, Greenwich,</span> <span>CT 06807</span>
-                    </span>
-                </div>
-                <div class="footer__contact-row no-display-under-991">
-                    <span class="footer__contact-info">
-                        <span>3 River Road,</span> <span>2nd Floor, Greenwich,</span> <span>CT 06807</span>
-                    </span>
-                </div>
-                <div class="footer__text footer__text--small display-under-991" style="display: block; text-align: right;">
-                    © 2020 One River Asset Management. All Rights Reserved.
-                </div>
-                <!-- <div class="footer__contact-row">
-                    <span class="footer__contact-info">
-                        NFA ID: 0461647
-                    </span>
-                    <span class="footer__contact-info-spacer">|</span>
-                    <span class="footer__contact-info">
-                        FINRA: 167835
-                    </span>
-                </div> -->
-            </div>
-            <!-- <div class="footer__text-container" style="margin-top: 0px;">
-                
-            </div> -->
-        </div>
-        <div class="footer__legal-links no-display-under-991">
-            <div class="footer__legal-item">
-                <a href="/privacypolicy.html" class="footer__legal-link">
-                    Privacy
-                </a>
-            </div>
-            <div class="footer__legal-item">
-                <a href="/termsconditions.html" class="footer__legal-link">
-                    Terms of use
-                </a>
-            </div>
-        </div>
-    </footer>
-
     <script>
         //mobile nav
         const mobileNavButton = document.querySelector('.navbar-mobile__toggle');
